--- a/instagram.ipynb
+++ b/instagram.ipynb
@@ -2,26 +2,113 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (insta_fetch_tagstory.py, line 83)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m\"/usr/local/lib/python3.5/dist-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2963\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-0eb404856a93>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import insta_fetch_tagstory as ift\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"instagram_stories/insta_fetch_tagstory.py\"\u001b[0;36m, line \u001b[0;32m83\u001b[0m\n\u001b[0;31m    print('Ah?')\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"instagram_stories\")\n",
     "\n",
     "import insta_fetch_tagstory as ift"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Request return 429 error!\n",
+      "{'message': 'Please wait a few minutes before you try again.', 'status': 'fail'}\n",
+      "Request return 404 error!\n",
+      "Login success!\n",
+      "\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n",
+      "====================================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "ift.main('tattoos')"
    ]
   },
   {
